# GProject

./: .travis.yml  Attraction  CMakeLists.txt  README.md  serverAPI.py
include/: Data..h  Data.hpp  Test.hpp  algorithm.hpp  data.hpp  queu.hpp  queue.hpp  server.hpp  worker.hpp
linters/: run.sh
protobuf/: structures.pb.cc  structures.pb.h  structures.proto
src/: algorithm.cpp  main.cpp  queu.cpp  queue.cpp  server.cpp  test.cpp  worker.cpp
test/: main.cpp  test.cpp  testAlgo.cpp  testQueue.cpp  testServer.cpp
